crates/rs_html_parser/tests/snapshots/h2_parser_tests__tests__basic_element.snap
---
source: crates/rs_html_parser/tests/h2_parser_tests.rs
expression: "parser_test(\"<div></div>\")"
---
[
    Token {
        data: "div",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "div",
        attrs: None,
        kind: CloseTag,
        is_implied: false,
    },
]
