crates/rs_html_parser/tests/snapshots/h2_parser_tests__tests__entities_for_xml_entities.snap
---
source: crates/rs_html_parser/tests/h2_parser_tests.rs
expression: "(parser_test(\"&amp;&gt;&amp&lt;&uuml;&#x61;&#x62&#99;&#100&#101\"))"
---
[
    Token {
        data: "&",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: ">",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "&",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "<",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "ü",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "a",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "b",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "c",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "d",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "e",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
