crates/rs_html_parser/tests/snapshots/h2_parser_tests__tests__entities_for_xml_incorrect_after_valid.snap
---
source: crates/rs_html_parser/tests/h2_parser_tests.rs
expression: "tokenize(\"&amp;&gt;&amp&sometext;&uuml\")"
---
[
    Token {
        data: "&",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: ">",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "&",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "&sometext;",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "ü",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
