crates/rs_html_parser/tests/snapshots/h2_parser_tests__tests__for_multi_byte_entities.snap
---
source: crates/rs_html_parser/tests/h2_parser_tests.rs
expression: "parser_test(\"&NotGreaterFullEqual;\")"
---
[
    Token {
        data: "≧",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
